# emodbus

./: .gitignore  BUILD  CMakeLists.txt  README  TODO  common.c  common.h  doxy  modbus-master.h  modbus_errno.h  modbus_pdu.h  modbus_proto.c  modbus_proto.h  modbus_sched.c  modbus_sched.h  read_holding_regs.c  read_holding_regs.h  rtu.c  rtu.h  sched.c  sched.h  write_mask_reg.c  write_mask_reg.h  write_multi_regs.c  write_multi_regs.h  write_single_reg.h
add/: list.h  stream.c  stream.h  stream_buffer.h
base/: CMakeLists.txt  common.c  common.h  modbus_errno.c  modbus_errno.h  modbus_pdu.c  modbus_pdu.h  modbus_proto.c  modbus_proto.h
base/add/: list.c  scheduler.c  stream.c  stream_buffer.c
client/: CMakeLists.txt  async_client.c  async_client.h  client.c  client_base.c  client_base.h  modbus_client.h  modbus_sched.c  modbus_sched.h  read_coils.c  read_fifo.c  read_file_record.c  read_holding_regs.c  read_holding_regs.h  sync_client.c  sync_client.h  write_coils.c  write_file_record.c  write_mask_reg.c  write_multi_regs.c  write_multi_regs.h  write_single_reg.c
cpp/: CMakeLists.txt  emodbus.cpp
cpp-wrap/: CMakeLists.txt  emodbus.cpp
cpp-wrap/include/emodbus/: emodbus.hpp
emodbus/: CMakeLists.txt
emodbus/base/: CMakeLists.txt  modbus_errno.c  modbus_pdu.c  modbus_proto.c  modbus_transport.c
emodbus/base/add/: crc.c  s-list.c
emodbus/client/: CMakeLists.txt  client.c  read_bits.c  read_coils.c  read_fifo.c  read_regs.c  read_write_regs.c  write_coil.c  write_file_record.c  write_multi_regs.c  write_single_reg.c
emodbus/include/emodbus/: emodbus.hpp
emodbus/include/emodbus/base/: byte-word.h  calc_pdu_size.h  common.h  compat.h  limits.h  modbus_errno.h  modbus_proto.h  modbus_transport.h
emodbus/include/emodbus/base/add/: container_of.h  crc.h
emodbus/include/emodbus/client/: client.h  read_bits.h  read_fifo.h  read_file_record.h  read_regs.h  read_write_regs.h  write_coils.h  write_mask_reg.h
emodbus/include/emodbus/implementations/posix/: mb-tcp-via-tcp-server.h  serial-port.h  tcp-client-rtu.hpp
emodbus/include/emodbus/protocols/: rtu.h  tcp.h
emodbus/include/emodbus/server/: bits.h  file.h  holdings.h  regs.h  server.h
emodbus/include/emodbus/transport/: rtu.h  tcp.h
emodbus/include/emodbus/transport/add/: simple-crc.h
emodbus/protocols/: rtu.c  tcp.c
emodbus/server/: CMakeLists.txt  exception.c  read_bits.c  read_coils.c  read_fifo.c  read_file.c  read_holding_regs.c  read_regs.c  read_write_regs.c  server.c  write_coil.c  write_coils.c  write_file.c  write_mask_reg.c  write_multi_regs.c  write_single_reg.c
emodbus/transport/: CMakeLists.txt  rtu.c  tcp.c
emodbus/transport/add/: simple-crc.c
examples/: CMakeLists.txt  client-via-serial.cpp  client.c  client.cpp  server-via-serial.c  server.c
examples/naked_rtu/: CMakeLists.txt  rtu_via_tty.c  rtu_via_tty.h  server.c
implementations/: CMakeLists.txt
implementations/include/emodbus/impl/posix/: client.h  client.hpp  dumper.h  mb-rtu-via-serial.h  mb-rtu-via-tcp-client.h  mb-tcp-via-tcp-client.h  mb-tcp-via-tcp-server.h  pdu.h  serial-port.h  serial-rtu.hpp  tcp-client-rtu.hpp  tcp-server.h
implementations/posix/: CMakeLists.txt  client.c  client.cpp  dumper.c  mb-rtu-via-serial.c  mb-rtu-via-tcp-client.c  mb-tcp-via-tcp-client.c  mb-tcp-via-tcp-server.c  pdu.c  serial-port.c  serial-rtu.cpp  tcp-client-rtu.cpp  tcp-client.c  tcp-server.c
include/emodbus/: emodbus.hpp
include/emodbus/base/: byte-word.h  calc_pdu_size.h  common.h  modbus_errno.h  modbus_pdu.h  modbus_proto.h
include/emodbus/base/add/: bit_vector.hpp  crc.h  s-list.h  scheduler.h  stream.h
include/emodbus/client/: async_client.h  client.h  client_base.h  read_coils.h  read_fifo.h  read_file_record.h  read_holding_regs.h  sync_client.h  write_coil.h  write_coils.h  write_file_record.h  write_multi_regs.h  write_single_reg.h
include/emodbus/implementations/posix/: mb-tcp-via-tcp-client.h  mb-tcp-via-tcp-server.h  serial-rtu.hpp  tcp-client-rtu.hpp
include/emodbus/proto-implementations/: tcp-client-tcp.h  tcp-server-tcp.h  tcp-server.h
include/emodbus/protocols/: rtu.h  tcp.h
include/emodbus/protocols/implementations/: serial-rtu.hpp  tcp-client-rtu.hpp  tcp-client-tcp.hpp  tcp-client.h  tcp-server.h
include/emodbus/server/: coils.h  file.h  holdings.h  server.h  server_base.h
proto-implementations/: CMakeLists.txt  tcp-client-tcp.c  tcp-client-tcp.cpp  tcp-client.c  tcp-server-tcp.c  tcp-server.c
protocols/: CMakeLists.txt  rtu.c  rtu.h  tcp.c
protocols/implementations/: CMakeLists.txt  serial-rtu.cpp  tcp-client-rtu.cpp  tcp-client-tcp.cpp  tcp-client.c  tcp-server-tcp.c
server/: CMakeLists.txt  read_file.c  read_holding_regs.c  server.c  server_base.c  write_coils.c  write_file.c  write_mask_reg.c  write_multi_regs.c  write_single_reg.c
test/: CMakeLists.txt  dumping_helper.cpp  dumping_helper.hpp  posix-serial-port.c  posix-serial-port.h  server_test.cpp  sync_client_test.cpp  timespec_operations.c  timespec_operations.h
test/posix_serial_rtu/: CMakeLists.txt  posix-serial-port.h  posix_serial_rtu.cpp  posix_serial_rtu.hpp
test/rtu/: CMakeLists.txt  rtu.cpp  rtu.hpp  serial-rtu.cpp  stream-posix-serial.c  stream-posix-serial.h  stream-tcp-client.c  stream-tcp-client.h  tcp-client-rtu.cpp  tcp-client-rtu.hpp
test/scripts/: tcp-server-example.rb  test-server-coils.rb
tests/: .directory  CMakeLists.txt  dumping_helper.cpp  dumping_helper.hpp  event_server.c  server_test.cpp  sync_client_test.cpp  tty2tty.c
tests/scripts/: tcp-server-example.rb
